--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -142,6 +142,7 @@
   research-area: Optimal control problems governed by PDEs, Finite element method
 
 - name: Rishabh Agnihotri
+  webpage: https://sites.google.com/view/rishabhagnihotri
   phd: HRI, Prayagraj
   user-id: rishabha
   position: IOE
