--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -1030,6 +1030,17 @@
   mrclass: '60D05 (05C82 60F15 60G55 60K30)'
   volume: '27'
 
+- author: 'Patil, Dilip P. and Verma, J. K.'
+  url: 'https://doi.org/10.1007/978-3-030-89694-2_22'
+  mrnumber: '4394425'
+  pages: '669--687'
+  year: '2021'
+  publisher: 'Springer, Cham'
+  booktitle: 'Commutative algebra'
+  title: 'Rational points and trace forms on a finite algebra over a real closed field'
+  doi: '10.1007/978-3-030-89694-2\_22'
+  mrclass: '13P15 (13B22 13F30 13H15 14Q30)'
+
 - number: '11'
   author: 'Hyv\"onen, N. and Nandakumaran, A. K. and Varma, H. M. and Vasu, R. M.'
   fjournal: 'Mathematical Methods in the Applied Sciences'
@@ -1199,6 +1210,18 @@
   mrnumber: '3100435'
   mrclass: '46L07 (46E22 46L05)'
   volume: '79'
+
+- number: '1'
+  author: 'Ray, Anubhab and Paul, Kallol and Sain, Debmalya and Dey, Subhrajit'
+  fjournal: 'Journal of Convex Analysis'
+  pages: '165--181'
+  year: '2022'
+  title: 'Some remarks on orthogonality of bounded linear operators'
+  issn: '0944-6532'
+  journal: 'J. Convex Anal.'
+  mrnumber: '4403790'
+  mrclass: '47L05 (46B20)'
+  volume: '29'
 
 - number: '3'
   author: 'Sachdev, P. L. and Ramanan, Sharadha'
@@ -2577,21 +2600,6 @@
   mrclass: '57N10 (57M27 57N13)'
   volume: '77'
 
-- number: '3'
-  author: 'Ghosh, Mrinal K. and Saha, Subhamay'
-  fjournal: 'Stochastic Analysis and Applications'
-  url: 'http://dx.doi.org/10.1080/07362994.2011.564455'
-  pages: '511--522'
-  year: '2011'
-  mrreviewer: 'Lothar Breuer'
-  title: 'Stochastic processes with age-dependent transition rates'
-  doi: '10.1080/07362994.2011.564455'
-  issn: '0736-2994'
-  journal: 'Stoch. Anal. Appl.'
-  mrnumber: '2795561'
-  mrclass: '60J27 (60J75)'
-  volume: '29'
-
 - number: '2'
   author: 'Dond, Asha K. and Gudi, Thirupathi'
   fjournal: 'Numerical Methods for Partial Differential Equations. An International Journal'
@@ -2969,6 +2977,35 @@
   mrnumber: '2520777'
   mrclass: '62P05 (60E10 91G40)'
   volume: '17'
+
+- number: '3'
+  author: 'Ghosh, Mrinal K. and Saha, Subhamay'
+  fjournal: 'Stochastic Analysis and Applications'
+  url: 'http://dx.doi.org/10.1080/07362994.2011.564455'
+  pages: '511--522'
+  year: '2011'
+  mrreviewer: 'Lothar Breuer'
+  title: 'Stochastic processes with age-dependent transition rates'
+  doi: '10.1080/07362994.2011.564455'
+  issn: '0736-2994'
+  journal: 'Stoch. Anal. Appl.'
+  mrnumber: '2795561'
+  mrclass: '60J27 (60J75)'
+  volume: '29'
+
+- number: '2'
+  author: 'Ghosh, Mrinal K. and Pradhan, Somnath'
+  fjournal: 'Mathematical Control and Related Fields'
+  url: 'https://doi.org/10.3934/mcrf.2021025'
+  pages: '343--370'
+  year: '2022'
+  title: 'A nonzero-sum risk-sensitive stochastic differential game in the orthant'
+  doi: '10.3934/mcrf.2021025'
+  issn: '2156-8472'
+  journal: 'Math. Control Relat. Fields'
+  mrnumber: '4396400'
+  mrclass: '91A23 (93E20)'
+  volume: '12'
 
 - number: '2'
   author: 'Balakumar, G. P. and Borah, Diganta and Mahajan, Prachi and Verma, Kaushal'
@@ -6575,6 +6612,19 @@
   mrclass: '65M60 (76L05)'
   volume: '31'
 
+- url: 'https://doi.org/10.1007/978-3-030-72058-2_1'
+  mrnumber: '4390221'
+  pages: '1--28'
+  year: '2021'
+  publisher: 'Springer, Cham'
+  booktitle: 'Geometric aspects of harmonic analysis'
+  title: 'An extension problem and Hardy type inequalities for the Grushin operator'
+  doi: '10.1007/978-3-030-72058-2\_1'
+  author: 'Balhara, Rakesh and Boggarapu, Pradeep and Thangavelu, Sundaram'
+  series: 'Springer INdAM Ser.'
+  mrclass: '43A85 (42B20)'
+  volume: '45'
+
 - number: '3'
   author: 'Roy, Dipankar and Pandit, Rahul'
   fjournal: 'Physical Review E'
@@ -9603,6 +9653,20 @@
   mrclass: '11M06'
   volume: '91'
 
+- number: '2'
+  author: 'Manikandan, K. and Vishnu Priya, N. and Senthilvelan, M. and Sankaranarayanan, R.'
+  fjournal: 'Waves in Random and Complex Media. Propagation, Scattering and Imaging'
+  url: 'https://doi.org/10.1080/17455030.2020.1804645'
+  pages: '867--886'
+  year: '2022'
+  title: 'Higher-order matter rogue waves and their deformations in two-component Bose-Einstein condensates'
+  doi: '10.1080/17455030.2020.1804645'
+  issn: '1745-5030'
+  journal: 'Waves Random Complex Media'
+  mrnumber: '4393698'
+  mrclass: '81Q80 (35Q40 76Y05 82C10)'
+  volume: '32'
+
 - number: '3'
   author: 'Dasgupta, Aparajita and Wong, M. W.'
   fjournal: 'Cubo. A Mathematical Journal'
@@ -10379,6 +10443,19 @@
   mrnumber: '4078388'
   mrclass: '65N30 (65K15 65N12 65N15)'
   volume: '83'
+
+- number: '1'
+  author: 'Bera, Sudip'
+  fjournal: 'Enumerative Combinatorics and Applications'
+  url: 'https://doi.org/10.54550/eca'
+  pages: 'Paper No. S2R5, 12'
+  year: '2021'
+  title: 'Combinatorialization of Sury and McLaughlin identities and general linear recurrences by a unified approach'
+  doi: '10.54550/eca'
+  journal: 'Enumer. Comb. Appl.'
+  mrnumber: '4398550'
+  mrclass: '05A19 (05A05 05C20 05E05)'
+  volume: '1'
 
 - number: '15'
   author: 'Nandakumaran, Akambadath and Prakash, Ravi and Sardar, Bidhan Chandra'
@@ -11185,20 +11262,6 @@
   mrclass: '20C30 (05E10 60J05)'
   volume: '84B'
 
-- number: '3'
-  author: 'Das, Soumya and Khan, Rizwanur'
-  fjournal: 'The Quarterly Journal of Mathematics'
-  url: 'https://doi.org/10.1093/qmath/hay012'
-  pages: '1063--1087'
-  year: '2018'
-  title: 'The third moment of symmetric square $L$-functions'
-  doi: '10.1093/qmath/hay012'
-  issn: '0033-5606'
-  journal: 'Q. J. Math.'
-  mrnumber: '3859224'
-  mrclass: '11M06'
-  volume: '69'
-
 - number: '1'
   author: 'Narayana, Darapaneni and Rao, T. S. S. R. K.'
   fjournal: 'Colloquium Mathematicum'
@@ -11473,6 +11536,33 @@
   mrnumber: '2867959'
   mrclass: '76B15 (35C10 35Q35)'
   volume: '29'
+
+- number: '1'
+  author: 'Ayyer, Arvind and Hathcock, Daniel and Tetali, Prasad'
+  fjournal: 'Combinatorial Theory'
+  url: 'https://doi.org/10.5070/c62156882'
+  pages: 'Paper No. 10, 28'
+  year: '2022'
+  title: 'Toppleable permutations, excedances and acyclic orientations'
+  doi: '10.5070/c62156882'
+  journal: 'Comb. Theory'
+  mrnumber: '4405999'
+  mrclass: '05A19 (05A05)'
+  volume: '2'
+
+- number: '3'
+  author: 'Das, Soumya and Khan, Rizwanur'
+  fjournal: 'The Quarterly Journal of Mathematics'
+  url: 'https://doi.org/10.1093/qmath/hay012'
+  pages: '1063--1087'
+  year: '2018'
+  title: 'The third moment of symmetric square $L$-functions'
+  doi: '10.1093/qmath/hay012'
+  issn: '0033-5606'
+  journal: 'Q. J. Math.'
+  mrnumber: '3859224'
+  mrclass: '11M06'
+  volume: '69'
 
 - number: '3'
   author: 'Chakrabarti, A. and Sahoo, T.'
@@ -13723,6 +13813,20 @@
   mrclass: '43A30'
   volume: '58'
 
+- number: '3'
+  author: 'Balodi, Mamta and Upadhyay, Sumit Kumar'
+  fjournal: 'Asian-European Journal of Mathematics'
+  url: 'https://doi.org/10.1142/S1793557122500528'
+  pages: 'Paper No. 2250052, 11'
+  year: '2022'
+  title: 'Simplicity of iterated Ore extensions'
+  doi: '10.1142/S1793557122500528'
+  issn: '1793-5571'
+  journal: 'Asian-Eur. J. Math.'
+  mrnumber: '4404204'
+  mrclass: '16U20 (16S36 17A36)'
+  volume: '15'
+
 - mrnumber: '2840854'
   pages: 'x+803'
   year: '2010'
@@ -15613,6 +15717,20 @@
   publisher: 'Univ. Grenoble I, Saint-Martin-d''H\`eres'
   mrclass: '53C21'
   volume: '26'
+
+- number: '2'
+  author: 'Giri, Deb Kumar and Srivastava, R. K.'
+  fjournal: 'The Journal of Fourier Analysis and Applications'
+  url: 'https://doi.org/10.1007/s00041-022-09932-8'
+  pages: 'Paper No. 37, 17'
+  year: '2022'
+  title: 'Heisenberg uniqueness pairs for the finitely many parallel lines with an irregular gap'
+  doi: '10.1007/s00041-022-09932-8'
+  issn: '1069-5869'
+  journal: 'J. Fourier Anal. Appl.'
+  mrnumber: '4402147'
+  mrclass: '42A38 (44A35)'
+  volume: '28'
 
 - author: 'Onn, Uri and Singla, Pooja'
   fjournal: 'Journal of Algebra'
