--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -527,6 +527,19 @@
   journal: 'Int. Math. Res. Not. IMRN'
   mrnumber: '2427456'
 
+- author: 'Dhillon, Gurbir and Khare, Apoorva'
+  fjournal: 'Journal of Algebra'
+  url: 'https://doi.org/10.1016/j.jalgebra.2022.03.030'
+  pages: '164-200'
+  year: '2022'
+  title: 'The weights of simple modules in Category $\mathcal{O}$ for Kac-Moody algebras'
+  doi: '10.1016/j.jalgebra.2022.03.030'
+  issn: '0021-8693'
+  journal: 'J. Algebra'
+  mrnumber: '4407678'
+  mrclass: '17B10 (17B37 17B67 20G42 22E47)'
+  volume: '603'
+
 - author: 'Deb, Prahllad'
   fjournal: 'Bulletin des Sciences Math&eacute;matiques'
   url: 'https://doi.org/10.1016/j.bulsci.2021.102977'
@@ -539,6 +552,19 @@
   mrnumber: '4243295'
   mrclass: '32A60 (32C99 32Q35 46E22 47B32 53C07)'
   volume: '169'
+
+- number: '4'
+  author: 'Goyal, Shuchita and Shukla, Samir and Singh, Anurag'
+  fjournal: 'Electronic Journal of Combinatorics'
+  url: 'https://doi.org/10.37236/10496'
+  pages: 'Paper No. 4.16, 26'
+  year: '2021'
+  title: 'Matching complexes of $3 \times n$ grid graphs'
+  doi: '10.37236/10496'
+  journal: 'Electron. J. Combin.'
+  mrnumber: '4394659'
+  mrclass: '05E45 (55P15)'
+  volume: '28'
 
 - mrnumber: '4321169'
   pages: '63-87'
@@ -588,21 +614,6 @@
   mrnumber: '4279276'
   mrclass: '05E05 (05E16 17B67)'
   volume: '183'
-
-- number: '1-2'
-  author: 'Gorai, Sushil'
-  fjournal: 'Manuscripta Mathematica'
-  url: 'http://dx.doi.org/10.1007/s00229-010-0405-x'
-  pages: '43-62'
-  year: '2011'
-  mrreviewer: 'Marshall A. Whittlesey'
-  title: 'Local polynomial convexity of the union of two totally-real surfaces at their intersection'
-  doi: '10.1007/s00229-010-0405-x'
-  issn: '0025-2611'
-  journal: 'Manuscripta Math.'
-  mrnumber: '2783386'
-  mrclass: '32E20 (32V40)'
-  volume: '135'
 
 - number: '3-4'
   author: 'Bera, Sayani and Pal, Ratna and Verma, Kaushal'
@@ -1113,6 +1124,33 @@
   mrclass: '93B05 (34G20 34H05 47N20)'
   volume: '24'
 
+- number: '2'
+  author: 'Anoop, V. P. and Parui, Sanjay'
+  fjournal: 'Annales Math&eacute;matiques Blaise Pascal'
+  pages: '117-140'
+  year: '2021'
+  title: 'Hardy-Littlewood-Sobolev inequality for upper half space'
+  issn: '1259-1734'
+  journal: 'Ann. Math. Blaise Pascal'
+  mrnumber: '4407856'
+  mrclass: '42B37 (42B10 42B35)'
+  volume: '28'
+
+- number: '1-2'
+  author: 'Gorai, Sushil'
+  fjournal: 'Manuscripta Mathematica'
+  url: 'http://dx.doi.org/10.1007/s00229-010-0405-x'
+  pages: '43-62'
+  year: '2011'
+  mrreviewer: 'Marshall A. Whittlesey'
+  title: 'Local polynomial convexity of the union of two totally-real surfaces at their intersection'
+  doi: '10.1007/s00229-010-0405-x'
+  issn: '0025-2611'
+  journal: 'Manuscripta Math.'
+  mrnumber: '2783386'
+  mrclass: '32E20 (32V40)'
+  volume: '135'
+
 - number: '1'
   author: 'Sachdev, P. L. and Mayil Vaganan, B.'
   fjournal: 'Studies in Applied Mathematics'
@@ -1197,6 +1235,20 @@
   mrnumber: '4110598'
   mrclass: '94A60'
   volume: '33'
+
+- number: '2'
+  author: 'Bhattacharyya, Tirthankar and Kumar, Poornendu and Sau, Haripada'
+  fjournal: 'Analysis \& PDE'
+  url: 'https://doi.org/10.2140/apde.2022.15.477'
+  pages: '477-506'
+  year: '2022'
+  title: 'Distinguished varieties through the Berger-Coburn-Lebow theorem'
+  doi: '10.2140/apde.2022.15.477'
+  issn: '2157-5045'
+  journal: 'Anal. PDE'
+  mrnumber: '4409884'
+  mrclass: '47A13 (32C25 47A20 47A48 47A57)'
+  volume: '15'
 
 - number: '1-2'
   author: 'Bhattacharyya, Tirthankar and Dritschel, Michael A. and Todd, Christopher S.'
@@ -2227,6 +2279,20 @@
   mrclass: '15B48 (15A45 47B10)'
   volume: '149'
 
+- number: '2'
+  author: 'Misra, Gadadhar and Pramanick, Paramita and Sinha, Kalyan B.'
+  fjournal: 'Integral Equations and Operator Theory'
+  url: 'https://doi.org/10.1007/s00020-022-02693-5'
+  pages: 'Paper No. 16, 37'
+  year: '2022'
+  title: 'A trace inequality for commuting $d$-tuples of operators'
+  doi: '10.1007/s00020-022-02693-5'
+  issn: '0378-620X'
+  journal: 'Integral Equations Operator Theory'
+  mrnumber: '4411728'
+  mrclass: '47B10 (47A08 47A16 47B20 47B37)'
+  volume: '94'
+
 - number: '4'
   author: 'Bagchi, Bhaskar and Datta, Basudeb'
   fjournal: 'Discrete Mathematics'
@@ -2978,6 +3044,19 @@
   mrclass: '62P05 (60E10 91G40)'
   volume: '17'
 
+- author: 'Gupta, Rahul and Krishna, Amalendu'
+  fjournal: 'Advances in Mathematics'
+  url: 'https://doi.org/10.1016/j.aim.2022.108376'
+  pages: 'Paper No. 108376, 75'
+  year: '2022'
+  title: 'Idele class groups with modulus'
+  doi: '10.1016/j.aim.2022.108376'
+  issn: '0001-8708'
+  journal: 'Adv. Math.'
+  mrnumber: '4406254'
+  mrclass: '14C25 (11R56 14F42 19E15)'
+  volume: '404'
+
 - number: '3'
   author: 'Ghosh, Mrinal K. and Saha, Subhamay'
   fjournal: 'Stochastic Analysis and Applications'
@@ -3641,21 +3720,6 @@
   mrclass: '11F30 (11F03 11F50)'
   volume: '169'
 
-- number: '1-2'
-  author: 'Gupta, Subhojoy and Wolf, Michael'
-  fjournal: 'Mathematische Annalen'
-  url: 'https://doi.org/10.1007/s00208-018-1674-z'
-  pages: '73-118'
-  year: '2019'
-  mrreviewer: 'Arseniy A. Shcherbakov'
-  title: 'Meromorphic quadratic differentials and measured foliations on a Riemann surface'
-  doi: '10.1007/s00208-018-1674-z'
-  issn: '0025-5831'
-  journal: 'Math. Ann.'
-  mrnumber: '3968867'
-  mrclass: '32G15 (30F30 37F75 53C12 57R30)'
-  volume: '373'
-
 - number: '2'
   author: 'Rao, R. Vittal and Sukavanam, N.'
   fjournal: 'Journal of Mathematical Analysis and Applications'
@@ -3935,6 +3999,35 @@
   mrclass: '45E05 (30E25)'
   volume: '18'
 
+- number: '1'
+  author: 'Aiyappan, S. and Pettersson, K. and Sufian, A.'
+  fjournal: 'Differential Equations \& Applications'
+  url: 'https://doi.org/10.7153/dea-2022-14-03'
+  pages: '31-47'
+  year: '2022'
+  title: 'Homogenization of a non-periodic oscillating boundary via periodic unfolding'
+  doi: '10.7153/dea-2022-14-03'
+  issn: '1847-120X'
+  journal: 'Differ. Equ. Appl.'
+  mrnumber: '4415946'
+  mrclass: '35B27 (35J20 80M35)'
+  volume: '14'
+
+- number: '1-2'
+  author: 'Gupta, Subhojoy and Wolf, Michael'
+  fjournal: 'Mathematische Annalen'
+  url: 'https://doi.org/10.1007/s00208-018-1674-z'
+  pages: '73-118'
+  year: '2019'
+  mrreviewer: 'Arseniy A. Shcherbakov'
+  title: 'Meromorphic quadratic differentials and measured foliations on a Riemann surface'
+  doi: '10.1007/s00208-018-1674-z'
+  issn: '0025-5831'
+  journal: 'Math. Ann.'
+  mrnumber: '3968867'
+  mrclass: '32G15 (30F30 37F75 53C12 57R30)'
+  volume: '373'
+
 - number: '5'
   author: 'Ghosh, Mrinal K. and Arapostathis, Aristotle and Marcus, Steven I.'
   fjournal: 'SIAM Journal on Control and Optimization'
@@ -4061,6 +4154,18 @@
   mrnumber: '3545927'
   mrclass: '43A80 (26D15 35A08 35H20 35R03 46E35)'
   volume: '302'
+
+- number: '2'
+  author: 'Bhattacharyya, Tirthankar and Biswas, Anindya and Maitra, Anwoy'
+  fjournal: 'Indiana University Mathematics Journal'
+  pages: '685-713'
+  year: '2022'
+  title: 'On the geometry of the symmetrized bidisc'
+  issn: '0022-2518'
+  journal: 'Indiana Univ. Math. J.'
+  mrnumber: '4420102'
+  mrclass: '32M05 (32F45 32H02)'
+  volume: '71'
 
 - number: '1'
   author: 'Paul, Prabal and Pradeep, C. R. and Rajan, B. Sundar'
@@ -4231,6 +4336,18 @@
   mrnumber: '2384278'
   mrclass: '57N10 (53A10)'
   volume: '26'
+
+- author: 'Azimi, Ali and Bapat, Ravindra B. and Goel, Shivani'
+  fjournal: 'Special Matrices'
+  url: 'https://doi.org/10.1515/spma-2022-0162'
+  pages: '267-284'
+  year: '2022'
+  title: 'Steiner distance matrix of caterpillar graphs'
+  doi: '10.1515/spma-2022-0162'
+  journal: 'Spec. Matrices'
+  mrnumber: '4395728'
+  mrclass: '05C50 (05C05 05C12)'
+  volume: '10'
 
 - mrnumber: '3888619'
   pages: '145-174'
@@ -12302,21 +12419,6 @@
   mrclass: '32M05'
   volume: '504'
 
-- number: '3-4'
-  author: 'Bharali, Gautam'
-  fjournal: 'Mathematische Zeitschrift'
-  url: 'http://dx.doi.org/10.1007/s00209-011-0902-y'
-  pages: '1043-1063'
-  year: '2012'
-  mrreviewer: 'I. G. Kossovskiy'
-  title: 'The local polynomial hull near a degenerate CR singularity: Bishop discs revisited'
-  doi: '10.1007/s00209-011-0902-y'
-  issn: '0025-5874'
-  journal: 'Math. Z.'
-  mrnumber: '2945596'
-  mrclass: '32E20 (32V20 46J10)'
-  volume: '271'
-
 - number: '1'
   author: 'Gaussier, Herv&eacute; and Seshadri, Harish'
   fjournal: 'Proceedings of the American Mathematical Society'
@@ -12471,6 +12573,34 @@
   mrnumber: '3098189'
   mrclass: '39A30'
   volume: '26'
+
+- number: '3-4'
+  author: 'Bharali, Gautam'
+  fjournal: 'Mathematische Zeitschrift'
+  url: 'http://dx.doi.org/10.1007/s00209-011-0902-y'
+  pages: '1043-1063'
+  year: '2012'
+  mrreviewer: 'I. G. Kossovskiy'
+  title: 'The local polynomial hull near a degenerate CR singularity: Bishop discs revisited'
+  doi: '10.1007/s00209-011-0902-y'
+  issn: '0025-5874'
+  journal: 'Math. Z.'
+  mrnumber: '2945596'
+  mrclass: '32E20 (32V20 46J10)'
+  volume: '271'
+
+- number: '2'
+  author: 'Burton, Benjamin A. and Datta, Basudeb and Spreer, Jonathan'
+  fjournal: 'Electronic Journal of Combinatorics'
+  url: 'https://doi.org/10.37236/10292'
+  pages: 'Paper No. 2.6, 30'
+  year: '2022'
+  title: 'Flip graphs of stacked and flag triangulations of the 2-sphere'
+  doi: '10.37236/10292'
+  journal: 'Electron. J. Combin.'
+  mrnumber: '4406230'
+  mrclass: '57Q15 (05C10)'
+  volume: '29'
 
 - number: '2'
   author: 'Garg, Rahul and Thangavelu, Sundaram'
@@ -13077,6 +13207,20 @@
   mrclass: '53C07 (14J28 32J15 53C55)'
   volume: '118'
 
+- number: '3'
+  author: 'Bleher, Frauke M. and Chinburg, Ted and Greenberg, Ralph and Kakde, Mahesh and Sharifi, Romyar and Taylor, Martin J.'
+  fjournal: 'Journal of the European Mathematical Society (JEMS)'
+  url: 'https://doi.org/10.4171/JEMS/1115'
+  pages: '967-1005'
+  year: '2022'
+  title: 'Exterior powers in Iwasawa theory'
+  doi: '10.4171/JEMS/1115'
+  issn: '1435-9855'
+  journal: 'J. Eur. Math. Soc. (JEMS)'
+  mrnumber: '4397035'
+  mrclass: '11R23 (11R34)'
+  volume: '24'
+
 - author: 'Chakrabarty, Arijit'
   fjournal: 'Electronic Communications in Probability'
   url: 'http://dx.doi.org/10.1214/ECP.v15-1564'
@@ -13291,6 +13435,19 @@
   mrnumber: '4363743'
   mrclass: '32H02 (15A18 32F45 32H50 47A56)'
   volume: '32'
+
+- author: 'Belton, Alexander and Guillot, Dominique and Khare, Apoorva and Putinar, Mihai'
+  fjournal: 'Applied and Computational Harmonic Analysis. Time-Frequency and Time-Scale Analysis, Wavelets, Numerical Algorithms, and Applications'
+  url: 'https://doi.org/10.1016/j.acha.2022.04.002'
+  pages: '396-425'
+  year: '2022'
+  title: 'Hirschman-Widder densities'
+  doi: '10.1016/j.acha.2022.04.002'
+  issn: '1063-5203'
+  journal: 'Appl. Comput. Harmon. Anal.'
+  mrnumber: '4409245'
+  mrclass: '44A10 (05E05 15A15 15B48 30C40 60E05)'
+  volume: '60'
 
 - number: '2'
   author: 'Bhattacharjee, Monojit and Sarkar, Jaydeb'
@@ -14198,6 +14355,20 @@
   mrclass: '57M07 (20F65)'
   volume: '120'
 
+- number: '2'
+  author: 'Ern, Alexandre and Gudi, Thirupathi and Smears, Iain and Vohral&#39;\ik, Martin'
+  fjournal: 'IMA Journal of Numerical Analysis'
+  url: 'https://doi.org/10.1093/imanum/draa103'
+  pages: '1023-1049'
+  year: '2022'
+  title: 'Equivalence of local- and global-best approximations, a simple stable local commuting projector, and optimal $hp$ approximation estimates in $\boldsymbol H({\rm div})$'
+  doi: '10.1093/imanum/draa103'
+  issn: '0272-4979'
+  journal: 'IMA J. Numer. Anal.'
+  mrnumber: '4410735'
+  mrclass: '65N30 (65N15)'
+  volume: '42'
+
 - author: 'Kor&aacute;nyi, Adam and Misra, Gadadhar'
   fjournal: 'Advances in Mathematics'
   url: 'https://doi.org/10.1016/j.aim.2019.05.018'
@@ -15028,20 +15199,6 @@
   mrclass: '35R35 (80A20)'
   volume: '45'
 
-- number: '1'
-  author: 'Basu, Riddhipratim and Ganguly, Shirshendu and Hegde, Milind and Krishnapur, Manjunath'
-  fjournal: 'Israel Journal of Mathematics'
-  url: 'https://doi.org/10.1007/s11856-021-2135-z'
-  pages: '291-324'
-  year: '2021'
-  title: 'Lower deviations in $\beta$-ensembles and law of iterated logarithm in last passage percolation'
-  doi: '10.1007/s11856-021-2135-z'
-  issn: '0021-2172'
-  journal: 'Israel J. Math.'
-  mrnumber: '4282085'
-  mrclass: '60K35 (60B20 60F15)'
-  volume: '242'
-
 - number: '4'
   author: 'Dowerah, S. and Chakrabarti, A.'
   fjournal: 'Indian Journal of Pure and Applied Mathematics'
@@ -15254,6 +15411,33 @@
   mrnumber: '2226023'
   mrclass: '43A80 (32A50 43A90 44A35)'
   volume: '56'
+
+- number: '4'
+  author: 'Ayyer, Arvind and B&eacute;nyi, Be&aacute;ta'
+  fjournal: 'Electronic Journal of Combinatorics'
+  url: 'https://doi.org/10.37236/10420'
+  pages: 'Paper No. 4.18, 28'
+  year: '2021'
+  title: 'Toppling on permutations with an extra chip'
+  doi: '10.37236/10420'
+  journal: 'Electron. J. Combin.'
+  mrnumber: '4395924'
+  mrclass: '05A15 (05A05 05A10 05A19)'
+  volume: '28'
+
+- number: '1'
+  author: 'Basu, Riddhipratim and Ganguly, Shirshendu and Hegde, Milind and Krishnapur, Manjunath'
+  fjournal: 'Israel Journal of Mathematics'
+  url: 'https://doi.org/10.1007/s11856-021-2135-z'
+  pages: '291-324'
+  year: '2021'
+  title: 'Lower deviations in $\beta$-ensembles and law of iterated logarithm in last passage percolation'
+  doi: '10.1007/s11856-021-2135-z'
+  issn: '0021-2172'
+  journal: 'Israel J. Math.'
+  mrnumber: '4282085'
+  mrclass: '60K35 (60B20 60F15)'
+  volume: '242'
 
 - author: 'Roy, Saikat and Senapati, Tanusri and Sain, Debmalya'
   fjournal: 'Linear Algebra and its Applications'
@@ -15666,20 +15850,6 @@
   mrclass: '90C40'
   volume: '1'
 
-- number: '6'
-  author: 'Das, G. C. and Sarma, J. and Gao, Yi-Tian and Uberoi, C.'
-  fjournal: 'Physics of Plasmas'
-  url: 'http://dx.doi.org/10.1063/1.874075'
-  pages: '2374-2380'
-  year: '2000'
-  title: 'Dynamical behavior of the soliton formation and propagation in magnetized plasma'
-  doi: '10.1063/1.874075'
-  issn: '1070-664X'
-  journal: 'Phys. Plasmas'
-  mrnumber: '1762540'
-  mrclass: '76X05 (82D10)'
-  volume: '7'
-
 - author: 'Patil, D. P.'
   mrnumber: '1421086'
   pages: '195-203'
@@ -15989,6 +16159,34 @@
   mrclass: '65N30 (65N12 65N15 76D05)'
   volume: '68'
 
+- number: '5'
+  author: 'Sain, Debmalya and Roy, Saikat and Bagchi, Satya and Balestro, Vitor'
+  fjournal: 'Linear and Multilinear Algebra'
+  url: 'https://doi.org/10.1080/03081087.2020.1749541'
+  pages: '888-898'
+  year: '2022'
+  title: 'A study of symmetric points in Banach spaces'
+  doi: '10.1080/03081087.2020.1749541'
+  issn: '0308-1087'
+  journal: 'Linear Multilinear Algebra'
+  mrnumber: '4395820'
+  mrclass: '46B20 (52A21)'
+  volume: '70'
+
+- number: '6'
+  author: 'Das, G. C. and Sarma, J. and Gao, Yi-Tian and Uberoi, C.'
+  fjournal: 'Physics of Plasmas'
+  url: 'http://dx.doi.org/10.1063/1.874075'
+  pages: '2374-2380'
+  year: '2000'
+  title: 'Dynamical behavior of the soliton formation and propagation in magnetized plasma'
+  doi: '10.1063/1.874075'
+  issn: '1070-664X'
+  journal: 'Phys. Plasmas'
+  mrnumber: '1762540'
+  mrclass: '76X05 (82D10)'
+  volume: '7'
+
 - number: '3'
   author: 'Verma, Kaushal'
   fjournal: 'Mathematische Annalen'
@@ -16220,21 +16418,6 @@
   mrclass: '37D45 (34C15)'
   volume: '19'
 
-- number: '4'
-  author: 'Sengadir, T. and Pai, D. V. and Pani, A. K.'
-  fjournal: 'Nonlinear Analysis. Theory, Methods \& Applications. An International Multidisciplinary Journal. Series A: Theory and Methods'
-  url: 'http://dx.doi.org/10.1016/0362-546X(95)00181-T'
-  pages: '701-719'
-  year: '1997'
-  mrreviewer: 'R. R. Akhmerov'
-  title: 'A Leray-Schauder type theorem and applications to boundary value problems for neutral equations'
-  doi: '10.1016/0362-546X(95)00181-T'
-  issn: '0362-546X'
-  journal: 'Nonlinear Anal.'
-  mrnumber: '1420386'
-  mrclass: '47H15 (34K10 34K40 47H09 47H10 47N20)'
-  volume: '28'
-
 - number: '1-2'
   author: 'Krishnamurthy, E. V.'
   fjournal: 'Elektronische Informationsverarbeitung und Kybernetik'
@@ -16411,6 +16594,34 @@
   series: 'Oper. Theory Adv. Appl.'
   mrclass: '32M15 (14M12 17C36 46E22 47B35)'
   volume: '278'
+
+- number: '4'
+  author: 'Sengadir, T. and Pai, D. V. and Pani, A. K.'
+  fjournal: 'Nonlinear Analysis. Theory, Methods \& Applications. An International Multidisciplinary Journal. Series A: Theory and Methods'
+  url: 'http://dx.doi.org/10.1016/0362-546X(95)00181-T'
+  pages: '701-719'
+  year: '1997'
+  mrreviewer: 'R. R. Akhmerov'
+  title: 'A Leray-Schauder type theorem and applications to boundary value problems for neutral equations'
+  doi: '10.1016/0362-546X(95)00181-T'
+  issn: '0362-546X'
+  journal: 'Nonlinear Anal.'
+  mrnumber: '1420386'
+  mrclass: '47H15 (34K10 34K40 47H09 47H10 47N20)'
+  volume: '28'
+
+- number: '3'
+  author: 'Mukherjee, Sajal and Mukherjee, Sanjay'
+  fjournal: 'Enumerative Combinatorics and Applications'
+  url: 'https://doi.org/10.54550/eca2021v1s3r23'
+  pages: 'Paper No. S2R23, 9'
+  year: '2021'
+  title: 'Counting on matrices'
+  doi: '10.54550/eca2021v1s3r23'
+  journal: 'Enumer. Comb. Appl.'
+  mrnumber: '4409689'
+  mrclass: '05C30 (05A05 05A19 05C38)'
+  volume: '1'
 
 - number: '3'
   author: 'Sachdev, P. L. and Philip, Varughese'
