--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -236,7 +236,7 @@ aug2022:
     prereq-courses: MA 222
     ug-prereq-courses: ''
   - name: Topics in Non-linear Functional Analysis
-    code: MA 3xx
+    code: MA 388
     instructor: Arka Mallick
     timing: 
     venue: 
