algebraic graph theory

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -242,7 +242,7 @@ aug2022:
     venue: 
     webpage:
   - name: Algebraic Graph Theory
-    code: MA 3xx
+    code: MA 375
     instructor: Shivani Goel/Arvind Ayyer
 
 
