--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -78,7 +78,7 @@ jan2023:
     code: MA 208
     instructor: Siddhartha Gadgil
   - name: Introduction to Modular Forms
-    instructor: Soumya Das 
+    instructor: Mahesh Kakde 
     code: MA 215
   - name: Introduction to Stochastic Processes
     code: MA 262
